fix mdx table component mobile view scroll
scrollbar could be seen even when no scroll was required. have amended table component scss to address this. table is still scrollable.

--- a/src/components/table/index.module.scss
+++ b/src/components/table/index.module.scss
@@ -4,7 +4,13 @@
   justify-content: center;
   padding: 0;
   margin: 0;
-  overflow: scroll;
+  overflow-y: scroll;
+  -mx-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.tableWrapper::-webkit-scrollbar {
+  display: none;
 }
 
 .tableWrapper > * {
